change in home file

--- a/src/Components/Pages/Home.css
+++ b/src/Components/Pages/Home.css
@@ -60,6 +60,14 @@
   background-image: url(/src/img/Gimg7.jpg);
   grid-area: image7;
 }
+.recentShorts{
+  /* border: 2px solid red; */
+  width: 60%;
+}
+.recentShortsText{
+  /* border: 2px solid red; */
+  display: none;
+}
 
 .grid-img {
   background-repeat: no-repeat;
@@ -67,7 +75,6 @@
   background-size: cover;
   border-radius: 15px;
   transition: 0.3s ease-in;
-  border: 2px solid black;
 }
 .grid-img:hover {
   transition: 0.3s ease-in;
@@ -75,15 +82,16 @@
 }
 
 .hero .hero-grid {
-  width: 60%;
+  /* border: 2px solid red; */
+  height: 100%;
+  width: 100%;
   display: grid;
   grid-template-areas:
     "image1 image1 image2 image2 image3 image3"
     "image4 image4 image5 image5 image3 image3"
     "image4 image4 image6 image6 image7 image7";
-  gap: 20px;
+  gap: 10px;
   padding: 20px;
-  border-left: 2px solid black;
 }
 
 /* icon */
@@ -95,42 +103,42 @@
 
 }
 .fa-brands {
-  font-size: 3vw;
+  font-size: 30px;
   padding: 10px;
 }
 
 #fb {
-  color:rgb(58, 133, 202);
+  color:rgb(17, 0, 255);
 }
 
 #fb:hover {
-  color: rgb(29, 117, 199);
+  color: white;
   cursor: pointer;
 }
 
 #insta {
-  color: rgb(201, 64, 174);
+  color: rgb(247, 10, 235);
 }
 
 #insta:hover {
-  color: rgb(164, 14, 134);
+  color: white;
   cursor: pointer;
 }
 
 #wp {
-  color: rgb(56, 149, 21);
+  color: rgb(72, 255, 5);
 }
 
 #wp:hover {
-  color: rgb(41, 107, 17);
+  color: white;
   cursor: pointer;
 }
 #yt {
-  color: rgb(153, 27, 27);
+  color: rgb(252, 22, 22);
 }
 
 #yt:hover {
-  color: rgb(200, 17, 17);
+  color: white;
   cursor: pointer;
 }
 
@@ -149,7 +157,32 @@
   .hero .hero-text{
     width: 100%;
   }
+  .hero .hero-text h2{
+    font-size: 25px;
+    font-weight: 700;
+  }
+  .hero .hero-text p {
+    font-size: 15px;
+    font-weight: 700;
+  }
+  .recentShorts{
+    margin-top: 20px;
+    background-color: rgba(243, 21, 51, 0.5);
+    width: 100%;
+  }
+  .recentShortsText{
+    display:block;
+    text-align: center;
+    margin-top: 40px;
+    color: white;
+    font-weight: 700;
+    font-size: 25px;
+  }
+  .fa-brands {
+    font-size: 20px;
+  }
   .hero .hero-grid{
+    margin-top: 20px;
     width: 100%;
     grid-template-areas:
     "image1 image1 image1 image1 image1 image1"
@@ -165,6 +198,7 @@
   .grid-img{
     width: 100%;
     height: 120px;
+    border: 1px solid black;
   }
 }
 
